--- a/index.css
+++ b/index.css
@@ -7,13 +7,17 @@ body {
   flex-direction: column;
   font-family: "Poppins", sans-serif;
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
 }
 
 .home {
   background-color: #10002b;
   height: 100vh;
   width: 100vw;
+  /* scroll-snap-type: y mandatory;
+  scroll-behavior: smooth; */
   /* display:flex; */
 }
 
@@ -21,12 +25,16 @@ body {
   background-color: #fff;
   height: 100vh;
   width: 100vw;
+  /* scroll-snap-type: y mandatory;
+  scroll-behavior: smooth; */
 }
 
 .contact {
   background-color: #10002b;
   height: 100vh;
   width: 100vw;
+  /* scroll-snap-type: y mandatory;
+  scroll-behavior: smooth; */
 }
 
 .home p {
@@ -64,6 +72,12 @@ body {
   font-size: 20px;
   margin-left: 1.5em;
   color: #fff;
+}
+
+.h_nav:hover,
+.a_nav:hover,
+.c_nav:hover {
+  cursor: pointer;
 }
 
 .about p {
