--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ body {
   z-index: 1;
   position: fixed;
   padding-right: 4em;
-  background-color: #10002b;
+  background-color: #fff;
   width: 100%;
   height: 3em;
 }
@@ -112,7 +112,7 @@ body {
 .c_nav {
   font-size: 20px;
   margin-left: 1.5em;
-  color: #fff;
+  color: #10002b;
   text-decoration: none;
 }
 
