aligned the about text at the center

--- a/index.css
+++ b/index.css
@@ -126,10 +126,10 @@ body {
   font-size: 30px;
   color: #10002b;
   margin-top: 0.5em;
-  margin-left: 2em;
   text-decoration: underline;
   text-decoration-style: solid;
   text-decoration-color: #f72585;
+  text-align: center;
 }
 
 .c_title {
